@@ -1069,3 +1069,7 @@
 2025-08-18 Fred Gleason <fredg@paravelsystems.com>
 	* Tweaked layout of the 'Exception' section of affiliate affidavits
 	in davit(1).
+2025-08-21 Fred Gleason <fredg@paravelsystems.com>
+	* Added a '--email-dry-run' switch to davit(1).
+	* Refactored the code for generating affidavit reminder messages in
+	davit(1).
